--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,6 @@
 # http://editorconfig.org
 
+# trim_trailing_whitespace = false
 
 # A special property that should be specified at the top of the file outside of
 
