--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,7 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": [
-    "plugin",
-    "react/recommended",
-    "standard",
-    "airbnb-base"
-  ],
-    "parserOptions": {
-    "ecmaFeatures": {
-    "jsx": true
-    },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": [
-    "react"
-  ],
+  "extends": "airbnb-base",
+
   "rules": {
-    "indent": "off",
-    "no-underscore-dangle": "off",
-    "linebreak-style": "off",
-    "no-console": "off"
-  }
+    "no-underscore-dangle": ["error", { "allow": ["_id"]}]
+   }
 }
