--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "express-mesto-gha",
   "version": "1.0.0",
   "description": "[![Tests](https://github.gitop.top/Dmitry2011/express-mesto-gha/actions/workflows/tests-13-sprint.yml/badge.svg)](https://github.gitop.top/Dmitry2011/express-mesto-gha/actions/workflows/tests-13-sprint.yml) [![Tests](https://github.gitop.top/Dmitry2011/express-mesto-gha/actions/workflows/tests-14-sprint.yml/badge.svg)](https://github.gitop.top/Dmitry2011/express-mesto-gha/actions/workflows/tests-14-sprint.yml) # Проект Mesto фронтенд + бэкенд",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint",
+    "lint": "npx eslint .",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -23,11 +22,7 @@
   "devDependencies": {
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.30.1",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
